<resources>
    <string name="app_name">Exchanger</string>
    <string name="my_balance">my balance</string>
    <string name="submit">Submit</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="sell">Sell</string>
    <string name="receive">Receive</string>

    <!-- Dialog -->
    <string name="dialog_title_ok">Currency converted</string>
    <string name="dialog_title_fail">Error</string>
    <string name="dialog_message_ok">You have converted %1$.2f %2$s to %3$.2f %4$s.</string>
    <string name="dialog_message_ok_with_fee">You have converted %1$.2f %2$s to %3$.2f %4$s.Commission fee %5$.2f%%.</string>
    <string name="dialog_message_fail">Operation aborted. Please check your balance and correct inputs.</string>
    <string name="dialog_button">Done</string>
    <string name="sell_hint">enter amount</string>

</resources>