<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/user_balance_text"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:text="@string/my_balance"
        android:textAllCaps="true"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_balance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/user_balance_text" />

    <TextView
        android:id="@+id/exchange_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_margin="10dp"
        android:text="@string/currency_exchange"
        android:textAllCaps="true"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_balance" />

    <TextView
        android:id="@+id/sell_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/sell"
        android:textSize="@dimen/main_text_size"
        android:textStyle="bold"
        android:gravity="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/exchange_title" />

    <EditText
        android:id="@+id/sell_value"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:cursorVisible="false"
        android:gravity="center|bottom"
        android:inputType="number"
        android:hint="@string/sell_hint"
        android:background="@null"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintEnd_toStartOf="@id/sell_currency"
        app:layout_constraintStart_toEndOf="@id/sell_text"
        app:layout_constraintTop_toTopOf="@id/sell_text" />

    <Spinner
        android:id="@+id/sell_currency"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:dropDownWidth="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/sell_text"
        tools:listitem="@android:layout/simple_spinner_item" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/sell_text"/>

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/receive"
        android:textSize="@dimen/main_text_size"
        android:textStyle="bold"
        android:gravity="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <TextView
        android:id="@+id/result_value"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintEnd_toStartOf="@id/result_currency"
        app:layout_constraintStart_toEndOf="@id/result_text"
        app:layout_constraintTop_toTopOf="@id/result_text" />

    <Spinner
        android:id="@+id/result_currency"
        style="@style/Widget.AppCompat.Spinner.DropDown"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:dropDownWidth="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/result_text"
        tools:listitem="@android:layout/simple_spinner_item" />


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        android:textSize="@dimen/main_text_size"
        app:layout_constraintTop_toBottomOf="@id/result_text" />


</androidx.constraintlayout.widget.ConstraintLayout>